# oxcli

./: .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
oxcli/: __init__.py  config.py  session.py  version.py
oxcli/common/: __init__.py
oxcli/contacts/: __init__.py
oxcli/tasks/: __init__.py
oxcli/tests/: test_base.py
