[metadata]
name = oxcli
version = 0.0.1
summary = command line interface for Open-Xchange
description-file =
    README.rst
author = Thomas Bechtold
author-email = thomasbechtold@jpberlin.de
home-page = https://github.com/toabctl/oxcli
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Office/Business :: Office Suites
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = oxcli

[entry_points]
console_scripts =
    oxcli = oxcli:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
